--- a/module2/pom.xml
+++ b/module2/pom.xml
@@ -54,6 +54,26 @@
 			<artifactId>slf4j-log4j12</artifactId>
 			<version>1.7.5</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>1.3.2</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-fileupload</groupId>
+			<artifactId>commons-fileupload</artifactId>
+			<version>1.3.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.jboss.resteasy</groupId>
+			<artifactId>resteasy-jaxrs</artifactId>
+			<version>3.0.8.Final</version>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse.jetty</groupId>
+			<artifactId>jetty-servlet</artifactId>
+			<version>9.2.0.M0</version>
+		</dependency>
 	</dependencies>
 	<profiles>
 		<profile>
@@ -71,23 +91,23 @@
 	<build>
 		<plugins>
 			<plugin>
-			  <groupId>org.codehaus.mojo</groupId>
-			  <artifactId>exec-maven-plugin</artifactId>
-			  <version>1.2.1</version>
-			  <executions>
-			    <execution>
-			      <goals>
-			        <goal>java</goal>
-			      </goals>
-			    </execution>
-			  </executions>
-			  <configuration>
-			    <mainClass>ru.spbstu.icc.kspt.kuznetsov.fpf4mir.core.Main</mainClass>
-			    <arguments>
-			      <argument>${fpf4mir.OriginalArtifact}</argument>
-			      <argument>${fpf4mir.Dataset}</argument>
-			    </arguments>
-			  </configuration>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>exec-maven-plugin</artifactId>
+				<version>1.2.1</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>java</goal>
+						</goals>
+					</execution>
+				</executions>
+				<!-- configuration> <mainClass>ru.spbstu.icc.kspt.kuznetsov.fpf4mir.core.Main</mainClass> 
+					<arguments> <argument>${fpf4mir.OriginalArtifact}</argument> <argument>${fpf4mir.Dataset}</argument> 
+					</arguments> </configuration -->
+
+				<configuration>
+					<mainClass>ru.spbstu.icc.kspt.kuznetsov.fpf4mir.core.HttpMain</mainClass>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
