domain-specific language

--- a/module2/pom.xml
+++ b/module2/pom.xml
@@ -74,6 +74,11 @@
 			<artifactId>jetty-servlet</artifactId>
 			<version>9.2.0.M0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.3.2</version>
+		</dependency>
 	</dependencies>
 	<profiles>
 		<profile>
