--- a/module2/pom.xml
+++ b/module2/pom.xml
@@ -94,6 +94,12 @@
 			<artifactId>jackson-mapper-asl</artifactId>
 			<version>1.9.13</version>
 		</dependency>
+		<dependency>
+			<groupId>com.google.protobuf</groupId>
+			<artifactId>protobuf-java</artifactId>
+			<version>2.4.1</version>
+		</dependency>
+
 	</dependencies>
 	<profiles>
 		<profile>
