--- a/fpf4mir-core/pom.xml
+++ b/fpf4mir-core/pom.xml
@@ -132,8 +132,41 @@
 					</arguments> </configuration -->
 
 				<configuration>
-					<mainClass>ru.spbstu.icc.kspt.kuznetsov.fpf4mir.core.HttpMain</mainClass>
+					<mainClass>ru.spbstu.icc.kspt.kuznetsov.fpf4mir.core.proxy.HttpMain</mainClass>
 				</configuration>
+			</plugin>
+
+			<!-- Maven Shade Plugin -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-shade-plugin</artifactId>
+				<version>2.3</version>
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>shade</goal>
+						</goals>
+						<configuration>
+							<transformers>
+								<transformer
+									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+									<mainClass>ru.spbstu.icc.kspt.kuznetsov.fpf4mir.core.proxy.HttpMain</mainClass>
+								</transformer>
+							</transformers>
+							<filters>
+								<filter>
+									<artifact>*:*</artifact>
+									<excludes>
+										<exclude>META-INF/*.SF</exclude>
+										<exclude>META-INF/*.DSA</exclude>
+										<exclude>META-INF/*.RSA</exclude>
+									</excludes>
+								</filter>
+							</filters>
+						</configuration>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
